connect component to redux store.add/remove

--- a/src/components/NewInput/NewInput.scss
+++ b/src/components/NewInput/NewInput.scss
@@ -37,7 +37,7 @@
     .close {
       cursor: pointer;
       border-radius: $radius;
-      background-color: aliceblue;
+      color: aliceblue;
     }
   }
 }
