--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,14 @@
 @import "./sass/variables.scss";
+body {
+  overflow: scroll;
 
-.App {
-  background-image: url(./img/background.jpg);
-  height: 100vh;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  .App {
+    display: block;
+    background-image: url(./img/background.jpg);
+    height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
