--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -6,9 +6,15 @@
   line-height: 1.4;
   border-radius: 5px;
   width: 300px;
+  height: 100%;
   padding: 1rem;
   > h4 {
     color: cornsilk;
     text-align: center;
+  }
+  .todolist {
+    width: 300px;
+    border-radius: 4px;
+    padding: 1em;
   }
 }
