drag&drop columns, refactoring

--- a/src/components/Cards/cards.scss
+++ b/src/components/Cards/cards.scss
@@ -7,7 +7,7 @@
   border-radius: 8px;
   margin: 0.5rem;
   box-shadow: 5px 5px 5px $shadow;
-  width: 250px;
+  //width: 250px;
   cursor: pointer;
   > span {
     width: 100%;
