--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -8,13 +8,16 @@
   width: 300px;
   height: 100%;
   padding: 1rem;
-  > h4 {
-    color: cornsilk;
-    text-align: center;
+  > div {
+    > h4 {
+      color: cornsilk;
+      text-align: center;
+    }
   }
+
   .todolist {
-    width: 300px;
+    width: 280px;
     border-radius: 4px;
-    padding: 1em;
+    padding: 0.5em;
   }
 }
